--- a/share/exposong/res/style.css
+++ b/share/exposong/res/style.css
@@ -28,6 +28,15 @@ h2
  padding: 0;
  margin: 0;
 }
+#footer
+{
+ background: #ddd;
+ color: #555;
+ margin-top: 10px;
+ text-align: center;
+ padding: 10px 10px;
+ font-size: 0.8em;
+}
 #content
 {
  margin: 21px
